--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-calendly": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^6.30.0",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
